--- a/lu.uni.e4l.platform.frontend.dev/.babelrc
+++ b/lu.uni.e4l.platform.frontend.dev/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [["env",{
-        "useBuiltIns": "entry"
+        "useBuiltIns": "entry",
+        "modules": "commonjs"
       }], "react"],
-    "plugins": ["transform-decorators-legacy","transform-object-rest-spread"]
+    "plugins": ["transform-decorators-legacy","transform-object-rest-spread","transform-class-properties"]
 }
