--- a/lu.uni.e4l.platform.frontend.dev/.gitlab-ci.yml
+++ b/lu.uni.e4l.platform.frontend.dev/.gitlab-ci.yml
@@ -89,28 +89,31 @@ deploy_staging:
     name: staging
     url: http://localhost:8884/
 
-# automated_uat:
-#   rules:
-#   - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-#   - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-#   image: selenium/standalone-chrome:latest
-#   stage: staging
-#   tags:
-#     - docker-runner
-#   needs:
-#     - job: deploy_staging
-#   variables:
-#     STAGING_URL: "http://172.17.0.1:8884"
-#     SCREENSHOT_DIR: "./screenshots"
-#   before_script:
-#     - pip install selenium
-#   script:
-#     - python3 tests/uat/screenshot_test.py
-#   artifacts:
-#     when: always
-#     paths:
-#       - screenshots/
-#     expire_in: 1 week
+automated_uat:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  image: alpine:latest
+  stage: staging
+  tags:
+    - docker-runner
+  needs:
+    - job: deploy_staging
+  variables:
+    STAGING_URL: "http://172.17.0.1:8884"
+  before_script:
+    - apk add --no-cache curl
+  script:
+    - mkdir -p uat-results
+    - 'echo "UAT: Checking calculator page..."'
+    - 'curl -sSf --retry 3 --retry-delay 5 "${STAGING_URL}/calculator" -o uat-results/calculator.html'
+    - 'echo "UAT: Calculator page loaded successfully"'
+    - 'echo "Page size: $(wc -c < uat-results/calculator.html) bytes"'
+  artifacts:
+    when: always
+    paths:
+      - uat-results/
+    expire_in: 1 week
 
 # promote_image:
 #   rules:
@@ -147,7 +150,7 @@ deploy_production:
   tags:
     - shell-runner
   needs:
-    - job: deploy_staging
+    - job: automated_uat
   before_script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     - docker pull "$CI_REGISTRY_IMAGE:latest"
